kubernetes/dev/portfolio-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-dev.jimmy.codes-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: letsencrypt-dev.jimmy.codes-prod
      hosts:
        - dev.jimmy.codes
  rules:
    - host: dev.jimmy.codes
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-svc-dev
              servicePort: 80
